# ROSA-flyways

./: .gitignore  .nojekyll  README.md  data_cleaning.html  dmsp.html  geodesic.html  index.html  initial_gam.html  migration_north.html  projection_error.html  pyproject.toml  references.html  search.json
R/: ICES_joint_flyway.R  aeqd_stan.R  cassini_attempt2.R  gemini_oblique cassini.R  mills_oblique cassini.R  mvgam_trial.R  projection_distortion.R
Stan/: aeqd_k_pca  aeqd_k_pca.stan  aeqd_pca  aeqd_pca.stan
data/: README.md  hud_detects_create.R  weekly_munge.R
notebooks/: .gitignore  _quarto.yml  data_cleaning.qmd  dmsp.qmd  geodesic.html  geodesic.qmd  index.qmd  initial_gam.qmd  migration_north.html  migration_north.qmd  projection_error.qmd  references.bib
notebooks/_book/: geodesic.html  index.html  migration_north.html  projection_error.html  search.json
notebooks/_book/site_libs/bootstrap/: bootstrap-bd52fb5f961f273b69e625f985f70732.min.css
notebooks/_freeze/data_cleaning/execute-results/: html.json
notebooks/_freeze/data_cleaning/libs/bootstrap/: bootstrap-7581c396db13aade273299aef088a186.min.css
notebooks/_freeze/geodesic/execute-results/: html.json
notebooks/_freeze/initial_gam/execute-results/: html.json
notebooks/_freeze/projection_error/execute-results/: html.json
notebooks/geodesic_files/libs/bootstrap/: bootstrap-cf9cc9841833f8e80b82d670c8c15ef0.min.css
